# 2025-2-HAI-trading-model

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  training.ipynb
modules/: agent.py  dataset.py  graph.py  stock_data.py  trainer.py
