[project]
name = "5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easydict>=1.13",
    "finance-datareader>=0.9.96",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pyarrow>=22.0.0",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
